[gd_scene load_steps=8 format=3 uid="uid://dcjbgpfbs2jcx"]

[ext_resource type="Script" path="res://Prefabs/Player_Controller.gd" id="1_juu28"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_r6jst"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ercic"]
height = 1.2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_cum6a"]

[sub_resource type="Animation" id="Animation_xpxwq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_if2no"]
resource_name = "head_bob_anim"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.158977, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ymm8u"]
_data = {
"RESET": SubResource("Animation_xpxwq"),
"head_bob_anim": SubResource("Animation_if2no")
}

[node name="CharacterBody3D" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00448823, 1.19209e-07, 0.00455117)
script = ExtResource("1_juu28")

[node name="standing_collision_shape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_r6jst")

[node name="crouching_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.397388, 0)
shape = SubResource("CapsuleShape3D_ercic")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_cum6a")

[node name="check_roof" type="RayCast3D" parent="."]
target_position = Vector3(0, 1, 0)

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.842016, 0)

[node name="Head" type="Node3D" parent="Neck"]

[node name="Camera3D" type="Camera3D" parent="Neck/Head"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Neck/Head/Camera3D"]
libraries = {
"": SubResource("AnimationLibrary_ymm8u")
}
